2002-02-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (FINGERPRINT): Document 'body'.

	* Cookie.py (make_fingerprint): Use the binascii module instead of
	base64 to do the binary to base64 encoding since we already have
	it imported.

	* Util.py (wraptext): New function to wrap and fill text.

2002-02-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (pickleit): New helper function to save an object to a
	Python pickle file.

	(unpickle): New helper function to retrieve an object from a
	Python pickle file.
	
	* Defaults.py (PENDING_CACHE, PENDING_CACHE_LEN): New variables
	used by tmda-pending's --cache option.

2002-02-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (make_date): Import just email.Utils.

	* Version.py (PLATFORM): Just use sys.platform instead of
	distutils.util.get_platform().
	
2002-02-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (seconds): Remove the exit(75) upon exception, as
	tmda-filter will now catch this.

	(writefile): Ditto.

	(append_to_file): Ditto.

	(maketext): Ditto.

	(substring_match): Removed.
	
2002-02-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (make_msgid): Change the idstring to 'TMDA', and reverse
	the order of randint and pid.

2002-02-01  Tim Legant  <tim@catseye.net>

	* FilterParser.py: Modified 'tag_action' regular expression to
	allow arbitrary quoted strings.
	
	(FilterParser.__buildactions): Allow arbitrary headers with quoted
	string values.

	(_actionstr): Handle arbitrary headers/values appropriately.

2002-01-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.__buildactions): Lowercase the
	incoming action as file_to_list no longer does.

	* Util.py (file_to_list): Only lowercase the first field of a
	whitespace split line.

2002-01-31  Tim Legant  <tim@catseye.net>

	* FilterParser.py: Add 'to/from-autocdb' and 'to/from-autodbm' to